♻️ 코드 리팩토링 : 랜덤 , 빠른 매칭 수정