@@ -7,12 +7,15 @@ import com.kmbbj.backend.balance.service.BalanceService;
 import com.kmbbj.backend.global.config.exception.ApiException;
 import com.kmbbj.backend.global.config.exception.ExceptionEnum;
 import com.kmbbj.backend.global.config.security.FindUserBySecurity;
+import com.kmbbj.backend.global.config.websocket.MatchWebSocketHandler;
 import com.kmbbj.backend.matching.dto.CreateRoomDTO;
 import com.kmbbj.backend.matching.entity.Room;
 import com.kmbbj.backend.matching.service.queue.MatchingQueueService;
 import com.kmbbj.backend.matching.service.room.RoomService;
 import com.kmbbj.backend.matching.service.userroom.UserRoomService;
+import com.kmbbj.backend.matching.util.AssetRangeCalculator;
 import lombok.RequiredArgsConstructor;
+import org.springframework.data.redis.core.RedisCallback;
 import org.springframework.data.redis.core.RedisTemplate;
 import org.springframework.scheduling.TaskScheduler;
 import org.springframework.security.core.context.SecurityContext;
@@ -26,34 +29,34 @@ import java.util.*;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.ScheduledFuture;
 import java.util.concurrent.atomic.AtomicBoolean;
+import java.util.concurrent.atomic.AtomicInteger;
 import java.util.concurrent.atomic.AtomicReference;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 public class MatchingServiceImpl implements MatchingService{
 
+    private final MatchWebSocketHandler matchWebSocketHandler;
     private final TaskScheduler taskScheduler;
-    private final Map<Long, ScheduledFuture<?>> assetRangeTasks = new ConcurrentHashMap<>();
     private final Map<Long, ScheduledFuture<?>> matchingTasks = new ConcurrentHashMap<>();
     private final Map<Object, ScheduledFuture<?>> scheduledTasks = new ConcurrentHashMap<>();
     private final RedisTemplate<String, Object> redisTemplate;
     private final RoomService roomService;
-    private final UserService userService;
     private final UserRoomService userRoomService;
     private final MatchingQueueService matchingQueueService;
     private final FindUserBySecurity findUserBySecurity;
     private final BalanceService balanceService;
     volatile boolean isShutdownRequested = false;
-
+    private final AssetRangeCalculator rangeCalculator = new AssetRangeCalculator();
+    private final AtomicInteger time = new AtomicInteger(0);
 
     @Override
     @Transactional
     public void startQuickMatching() {
         User user = findUserBySecurity.getCurrentUser();
         isShutdownRequested = false;
-        matchingQueueService.addUserToQueue(user, true);
-        scheduleMatchingTasks(user, 10, true);
+        matchingQueueService.addUserToQueue(user);
+        scheduleMatchingTasks(user,true);
     }
 
 
@@ -71,59 +74,60 @@ public class MatchingServiceImpl implements MatchingService{
             throw new ApiException(ExceptionEnum.BALANCE_NOT_FOUND);
         }
         isShutdownRequested = false;
-        matchingQueueService.addUserToQueue(user, false);
-        scheduleMatchingTasks(user, 1, false);
+        matchingQueueService.addUserToQueue(user);
+        scheduleMatchingTasks(user,false);
     }
 
     /**
      *
-     * @param user  현재 유저
-     * @param increment     자산 범위 증가량
-     * @param isQuickMatch  빠른 매칭 여부
+     * @param user
      */
     @Override
     @Transactional
-    public void scheduleMatchingTasks(User user, int increment, boolean isQuickMatch) {
+    public void scheduleMatchingTasks(User user,boolean isQuickMatch) {
+        AtomicBoolean isThirtyMinutesPassed = new AtomicBoolean(false);
         AtomicBoolean isFiveMinutesPassed = new AtomicBoolean(false);
-        AtomicBoolean isTenMinutesPassed = new AtomicBoolean(false);
-        AtomicReference<Long> minUser = new AtomicReference<>(4L);
         // 현재 SecurityContext 를 저장
         SecurityContext context = SecurityContextHolder.getContext();
 
-        // 자산 범위 설정
-        ScheduledFuture<?> assetRangeTask = taskScheduler.scheduleAtFixedRate(() -> {
-            // 작업 스레드에 SecurityContext 설정
-            SecurityContextHolder.setContext(context);
-            try {
-                if (isShutdownRequested || Thread.interrupted()) return;
-                updateAssetRange(user, increment);
-            } finally {
-                // SecurityContext 정리
-                SecurityContextHolder.clearContext();
-            }
-        }, Duration.ofMinutes(isQuickMatch ? 5 : 1));
-        scheduledTasks.put(user.getId(), assetRangeTask);
-        assetRangeTasks.put(user.getId(), assetRangeTask);
-
         // 매칭 실행 스케줄링
         ScheduledFuture<?> matchingTask = taskScheduler.scheduleWithFixedDelay(() -> {
+
             // 작업 스레드에 SecurityContext 설정
             SecurityContextHolder.setContext(context);
             try {
                 if (isShutdownRequested || Thread.interrupted()) return;
                 if (isQuickMatch) {
-                    handleQuickMatch(user,isQuickMatch,minUser);
+                    handleQuickMatch(user);
+                    System.out.println("matchingTask1");
                 } else {
-                    handleRandomMatch(user, isQuickMatch, isFiveMinutesPassed, isTenMinutesPassed);
+                    handleRandomMatch(user, isFiveMinutesPassed, isThirtyMinutesPassed);
+                    System.out.println("matchingTask2");
                 }
 
             } finally {
                 // SecurityContext 정리
                 SecurityContextHolder.clearContext();
             }
-        }, 1000);
+        }, 3000);
         scheduledTasks.put(user.getId(), matchingTask);
         matchingTasks.put(user.getId(), matchingTask);
+
+        // 시간 조건 설정 (30분)
+        ScheduledFuture<?> thirtyMinuteTask = taskScheduler.schedule(() -> {
+            // 작업 스레드에 SecurityContext 설정
+            SecurityContextHolder.setContext(context);
+            try {
+                if (isShutdownRequested || Thread.interrupted()) return;
+                isThirtyMinutesPassed.set(true);
+                System.out.println("isThirtyMinutesPassed");
+                if (!isQuickMatch) switchToQuickMatch(user);
+            } finally {
+                // SecurityContext 정리
+                SecurityContextHolder.clearContext();
+            }
+        }, new Date(System.currentTimeMillis() + Duration.ofSeconds(30).toMillis())); // 분으로 바꿔야댐
+        scheduledTasks.put(user.getId(), thirtyMinuteTask);
 
         // 시간 조건 설정 (5분)
         ScheduledFuture<?> fiveMinuteTask = taskScheduler.schedule(() -> {
@@ -132,92 +136,71 @@ public class MatchingServiceImpl implements MatchingService{
             try {
                 if (isShutdownRequested || Thread.interrupted()) return;
                 isFiveMinutesPassed.set(true);
+                System.out.println("isFiveMinutesPassed");
             } finally {
                 // SecurityContext 정리
                 SecurityContextHolder.clearContext();
             }
-        }, new Date(System.currentTimeMillis() + Duration.ofMinutes(5).toMillis())); // 분으로 바꿔야댐
+        }, new Date(System.currentTimeMillis() + Duration.ofSeconds(5).toMillis())); // 분으로 바꿔야댐
         scheduledTasks.put(user.getId(), fiveMinuteTask);
-
-        // 시간 조건 설정 (10분)
-        ScheduledFuture<?> tenMinuteTask = taskScheduler.schedule(() -> {
-            // 작업 스레드에 SecurityContext 설정
-            SecurityContextHolder.setContext(context);
-            try {
-                if (isShutdownRequested || Thread.interrupted()) return;
-                isTenMinutesPassed.set(true);
-                if (!isQuickMatch) switchToQuickMatch(user);
-            } finally {
-                // SecurityContext 정리
-                SecurityContextHolder.clearContext();
-            }
-        }, new Date(System.currentTimeMillis() + Duration.ofMinutes(10).toMillis())); // 분으로 바꿔야댐
-        scheduledTasks.put(user.getId(), tenMinuteTask);
-
-        if (isQuickMatch) {
-            // 최소 인원수 설정
-            ScheduledFuture<?> minUserTask = taskScheduler.scheduleAtFixedRate(() -> {
-                SecurityContextHolder.setContext(context);
-                try {
-                    if (isShutdownRequested || Thread.interrupted()) return;
-                    minUser.updateAndGet(v -> Math.max(1, v - 1));
-
-                } finally {
-                    SecurityContextHolder.clearContext();
-                }
-            }, Duration.ofMinutes(10)); // 분으로 바꾸셈
-            scheduledTasks.put(user.getId(), minUserTask);
-        }
     }
 
     /**
      *
      * @param user  현재 유저
-     * @param isQuickMatch  빠른 매칭 여부
      * @param isFiveMinutesPassed   5분 지났는지 확인하는 플레그
-     * @param isTenMinutesPassed    10분 지났는지 확인하는 플레그
+     * @param isThirtyMinutesPassed    30분 지났는지 확인하는 플레그
      */
     @Override
     @Transactional
-    // 랜덤 매칭시 방 만들어주는 로직
-    public void handleRandomMatch(User user, boolean isQuickMatch, AtomicBoolean isFiveMinutesPassed, AtomicBoolean isTenMinutesPassed) {
-        // 10분 후 루프 종료 조건 체크
-        if (isTenMinutesPassed.get()) return;
+    public void handleRandomMatch(User user, AtomicBoolean isFiveMinutesPassed, AtomicBoolean isThirtyMinutesPassed) {
+        if (matchingQueueService.isUserAlreadyMatched(user)) {
+            return;  // 유저가 이미 매칭된 상태라면 반환
+        }
 
-        // Redis 에서 사용자의 현재 자산 범위를 가져옴
-        Long currentRange = (Long) redisTemplate.opsForHash().get("userAssetRanges", user.getId().toString());
-        Long asset = balanceService.totalBalanceFindByUserId(user.getId()).get().getAsset();
-        List<User> potentialMatches = findPotentialMatches(asset, currentRange);
-        // 5분 지났으면 4명 되면 방 생성, 아니면 10명까지 가능
-        int requiredUserCount = isFiveMinutesPassed.get() ? 4 : 10;
+        double currentRange = rangeCalculator.calculateAssetRange(time.getAndIncrement());
+        synchronized (this) {  // 동기화 블록 추가
+            if (isThirtyMinutesPassed.get()) switchToQuickMatch(user);
 
-        if (potentialMatches.size() >= requiredUserCount) {
-            createRoomWithUsers(potentialMatches);
-            potentialMatches.forEach(completeUser -> matchingQueueService.removeUserFromQueue(completeUser, isQuickMatch));
+            redisTemplate.execute((RedisCallback<Object>) connection -> {
+                connection.multi();  // 트랜잭션 시작
+
+                Long asset = balanceService.totalBalanceFindByUserId(user.getId()).get().getAsset();
+                List<User> potentialMatch = findPotentialMatches(asset, currentRange);
+
+                int requiredUserCount = isFiveMinutesPassed.get() ? 4 : 10;
+
+                if (potentialMatch.size() >= requiredUserCount) {
+                    createRoomWithUsers(potentialMatch);
+                    potentialMatch.forEach(matchingQueueService::removeUserFromQueue);
+                }
+
+                connection.exec();  // 트랜잭션 커밋
+                return null;
+            });
         }
     }
 
     /**
      *
-     * @param user  현재 유저
-     * @param isQuickMatch  빠른 매칭 여부
-     * @param minUser   최소 인원수
+     * @param user
      */
     @Transactional
-    public void handleQuickMatch(User user, boolean isQuickMatch, AtomicReference<Long> minUser) {
-        Long range = (Long) redisTemplate.opsForHash().get("userAssetRanges", user.getId().toString());
-        List<Room> availableRooms = findAvailableRooms(range, minUser);
+    public void handleQuickMatch(User user) {
+        List<Room> availableRooms = findAvailableRooms();
         if (!availableRooms.isEmpty()) {
             // 가능한 방이 있다면, 첫 번째 방에 유저 입장
             Room room = availableRooms.get(0);
             roomService.enterRoom(room.getRoomId());
-            matchingQueueService.removeUserFromQueue(user,isQuickMatch);
+            matchWebSocketHandler.notifyAboutMatch(user.getId(),room.getRoomId());
             cancelMatching(user);
             cancelCurrentUserScheduledTasks();
         }
-        if (minUser.get() == 0){
+        else {
             // 방 생성
             Long latestRoomId = roomService.findRoomByLatestCreateDate().getRoomId();
+            // 초기 시드머니
+            long l = balanceService.totalBalanceFindByUserId(user.getId()).get().getAsset() / 3;
             CreateRoomDTO createRoomDTO = CreateRoomDTO.builder()
                     .title(String.format("빠른 매칭 %d", latestRoomId))
                     .end(5) // 게임 라운드 수
@@ -227,29 +210,29 @@ public class MatchingServiceImpl implements MatchingService{
                     .createDate(LocalDateTime.now())
                     .startSeedMoney(1000)
                     .build();
-            roomService.createRoom(createRoomDTO, user);
-            matchingQueueService.removeUserFromQueue(user,isQuickMatch);
+            Room room = roomService.createRoom(createRoomDTO, user);
+            matchWebSocketHandler.notifyAboutMatch(user.getId(),room.getRoomId());
             cancelMatching(user);
             cancelCurrentUserScheduledTasks();
+            System.out.println("handleQuickMatch");
         }
     }
 
     /**
      *
-     * @param range     현재 자산 조건 범위
-     * @param minUser   현재 최소 유저수
-     * @return 자산 범위에 맞고 최소인원수 이상인 방 list
+     * @return
      */
     @Override
     @Transactional
     // 빠른 매칭 시 들어갈만한 방 찾아주기
-    public List<Room> findAvailableRooms(Long range, AtomicReference<Long> minUser) {
+    // 수정 필요
+    // 자기가 들어갈 수 있는 방 중 가장 인원이 많은 방으로
+    public List<Room> findAvailableRooms() {
         User user = findUserBySecurity.getCurrentUser();
         Long asset = balanceService.totalBalanceFindByUserId(user.getId()).get().getAsset();
-        return roomService.findRoomsWithinAssetRange(asset, range).stream()
-                .filter(room -> room.getUserCount() >= minUser.get())
+        return roomService.findRoomsWithinAssetRange(asset / 3).stream()
                 .sorted(Comparator.comparing(Room::getUserCount))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     /**
@@ -261,12 +244,12 @@ public class MatchingServiceImpl implements MatchingService{
     @Override
     @Transactional
     // 랜덤 매칭시 유저 찾아주는 메서드
-    public List<User> findPotentialMatches(Long currentUserAsset, Long range) {
+    public List<User> findPotentialMatches(Long currentUserAsset, double range) {
         User currentUser = findUserBySecurity.getCurrentUser();
         Long asset = balanceService.totalBalanceFindByUserId(currentUser.getId()).get().getAsset();
-        return matchingQueueService.getUsersInQueue(false).stream()
-                .filter(user -> asset >= (currentUserAsset - (currentUserAsset * range / 100)) && asset <= (currentUserAsset + (currentUserAsset * range / 100)))
-                .collect(Collectors.toList());
+        long min = (long) (asset - (asset * range / 100)); // 자산 범위 중 최소 값
+        long max = (long) (asset + (asset * range / 100)); // 자산 범위 중 최대 값
+        return matchingQueueService.getUsersInQueue(min,max);
     }
 
     /**
@@ -277,11 +260,10 @@ public class MatchingServiceImpl implements MatchingService{
     @Transactional
     // 랜덤 매칭시 잡힌 유저들과 방 들어가기
     public void createRoomWithUsers(List<User> users) {
-        User currentUser = findUserBySecurity.getCurrentUser();
         // 모든 유저 ID를 추출
         List<Long> userIds = users.stream()
                 .map(User::getId)
-                .collect(Collectors.toList());
+                .toList();
 
         // 해당 유저들의 자산 정보만 조회
         List<TotalBalance> balances = userIds.stream()
@@ -304,15 +286,13 @@ public class MatchingServiceImpl implements MatchingService{
                 .startSeedMoney(1000)
                 .build();
 
-        cancelCurrentUserScheduledTasks();
-        cancelMatching(currentUser);
-        roomService.createRoom(createRoomDTO, richestUser);
-        users.remove(richestUser);
-        while (users.isEmpty()) {
-            roomService.enterRoom(users.getFirst().getId());
-            users.remove(users.getFirst());
-        }
-
+        Room room = roomService.createRoom(createRoomDTO, richestUser);
+        matchWebSocketHandler.notifyAboutMatch(richestUser.getId(),room.getRoomId());
+        users.forEach(user -> {
+            matchWebSocketHandler.notifyAboutMatch(user.getId(), room.getRoomId());
+            cancelCurrentUserScheduledTasks();
+            cancelMatching(user);
+        });
     }
 
     /**
@@ -324,30 +304,8 @@ public class MatchingServiceImpl implements MatchingService{
     // 매칭 자동 변경
     public void switchToQuickMatch(User user) {
         cancelMatching(user);
-//        matchingQueueService.addUserToQueue(user,true);
         startQuickMatching();
-    }
-
-    /**
-     *
-     * @param user        현재 유저
-     * @param increment   자산 증가율
-     */
-    @Override
-    @Transactional
-    // 자산 범위 업데이트
-    public void updateAssetRange(User user, int increment) {
-
-        Long asset = balanceService.totalBalanceFindByUserId(user.getId()).get().getAsset();
-        // Redis 에서 사용자의 현재 자산 범위를 가져옴
-        Long currentRange = (Long) redisTemplate.opsForHash().get("userAssetRanges", user.getId().toString());
-        if (currentRange == null) {
-            currentRange = asset * 10 / 100; // 초기 10% 설정
-        } else {
-            currentRange += asset * increment / 100;
-        }
-        // 업데이트된 범위를 Redis 에 저장
-        redisTemplate.opsForHash().put("userAssetRanges", user.getId().toString(), currentRange);
+        System.out.println("switchToQuickMatch");
     }
 
     /**
@@ -357,30 +315,21 @@ public class MatchingServiceImpl implements MatchingService{
     @Override
     @Transactional
     public void cancelMatching(User user) {
-        ScheduledFuture<?> assetRangeTask = assetRangeTasks.remove(user.getId());
         ScheduledFuture<?> matchingTask = matchingTasks.remove(user.getId());
-        if (assetRangeTask != null) assetRangeTask.cancel(false);
         if (matchingTask != null) matchingTask.cancel(false);
-    }
-
-    @Transactional
-    // 모든 유저의 작업 취소
-    // 관리자 전용
-    public void cancelAllUserScheduledTasks() {
-        for (Long userId : assetRangeTasks.keySet()) {
-            User user = userService.UserfindById(userId).orElseThrow(() -> new ApiException(ExceptionEnum.USER_NOT_FOUND));
-            cancelMatching(user);
-        }
+        System.out.println("cancelMatching");
     }
 
     @Override
     @Transactional
     public void cancelCurrentUserScheduledTasks() {
+        User user = findUserBySecurity.getCurrentUser();
         // 모든 작업에 대해 종료 요청
+        matchingQueueService.removeUserFromQueue(user);
         isShutdownRequested = true;
         scheduledTasks.forEach((key, future) -> {
             if (!future.isDone()) {
-                boolean wasCancelled = future.cancel(true);
+                boolean wasCancelled = future.cancel(false);
                 if (wasCancelled) {
                     System.out.println("종료 성공" + key);
                 } else {
